--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Project Pages
-description: "An Integrated Scientific Blogging Template"
+title: The Alpha Policy Lab
+description: "Bringing insights into actions"
 url: "https://projectpages.github.io"
 
 
