--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: The Alpha Policy Lab
-description: "Bringing insights into actions"
-url: "https://projectpages.github.io"
+title: Alpha Policy Lab
+description: "Bringing Insights Into Actions"
+url: "https://naibaozhao.com/project-pages/"
 
 
 
