--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Alpha Policy Lab
 description: "Bringing Insights Into Actions"
-url: "http://naibaozhao.com/project-pages/"
+url: 
 
 
 
