--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,7 +1,7 @@
 # Members
 
 - name: Yiming Xia
-  role: Associate Professor of Econbomics
+  role: Associate Professor of Economics
   img: https://avatars1.githubusercontent.com/u/7231251?v=3&s=460
   github: ahmetcecen
   gplus: https://plus.google.com/+AhmetCecen-GPlus
