--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:
 
 # Secondary Parameters
 baseurl: "/project-pages"
-header-img: img/home-bg.jpg
+header-img: img/WechatIMG4389.jpeg
 headercolor: "#FFFFFF"
 logo: /project-pages/img/logos/Project-Pages-New-Logo-Inverted.png
 
