--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url:
 baseurl: "/project-pages"
 header-img: img/WechatIMG4389.jpeg
 headercolor: "#FFFFFF"
-logo: /project-pages/img/logos/Project-Pages-New-Logo-Inverted.png
+logo: /project-pages/img/logos/
 
 # Tertiary Parameters
 github_username:  projectpages
